fixed scrolling to specific areas of the homepage through the nav links, fixed problems when the header would shrink while scrolling which resulted in the wrong offset height, issue still somewhat persists on mobile though, needs to be fixed fully

--- a/frontend/src/components-css/Header.css
+++ b/frontend/src/components-css/Header.css
@@ -1,5 +1,5 @@
 body {
-  overflow-x: hidden;
+  margin-top: -50px;
 }
 
 .entire-header, .login-panel, .entire-header * {
